# Weather_API

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: manage.py
src/api/: admin.py  models.py  serializers.py  services.py  urls.py  validators.py  views.py
src/api/migrations/: 0001_initial.py  0002_forecastoverride_api_forecas_city_e9ca35_idx.py
src/api/weather_provider/: weatherbit.py
src/project/: settings.py  urls.py
src/utils/: decorators.py
